Fixed bug with moon going behind hud

--- a/game/game.css
+++ b/game/game.css
@@ -15,6 +15,7 @@ body {
     font-family: 'Share Tech Mono', monospace;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .backgroundBright {
@@ -26,14 +27,16 @@ body {
 }
 
 .gameArea {
-    width: 100%;
-    height: 90%;
+    width: 90%;
+    height: 75%;
     position: fixed;
+    /* background-color: red; */
     z-index: 99;
 }
 
 .topHud {
     position: fixed;
+    top: 0;
     left: 0;
     display: flex;
     justify-content: center;
